sonarr/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-data
          mountPath: /config
        - name: symlinks-volume
          mountPath: /media
        - mountPath: "/downloads/zurg"
          name: zurg-volume
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-pvc
      - name: symlinks-volume
        persistentVolumeClaim:
          claimName: pvc-media-nfs
      - name: zurg-volume
        hostPath:
          path: /mnt/zurg/
          # Optional: specify the type of the hostPath. Use "DirectoryOrCreate" if you want the directory to be created if it does not already exist.
          type: Directory
