sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - protocol: TCP
    port: 8989
    targetPort: 8989
